<resources>
    <string name="app_name">Thân nhiệt</string>
    <string name="tab_hypothermia">Thân nhiệt</string>
    <string name="tab_add_student">Học sinh</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="add_new_student">Thêm \nhọc sinh mới</string>
    <string name="save">Lưu</string>
    <string name="search">Tìm kiếm</string>
    <string name="lb_name">Tên học sinh</string>
    <string name="lb_class">Lớp</string>
    <string name="lb_birthday">Ngày sinh</string>
    <string name="lb_birthday_add">Ngày sinh(yyyy-mm-dd)</string>
    <string name="lb_last_update">Ngày cập nhật</string>
    <string name="lb_hypothermia">Thân nhiệt</string>
    <string name="id_RFID">Mã học sinh(RFID)</string>
    <string name="lb_filter">Lọc</string>
    <string name="lbId">ID</string>
    <string name="list_students">Danh sách học sinh</string>
    <string name="temp_result">Kết quả đo thân nhiệt</string>
    <string name="temp_from">Thân nhiệt từ </string>
    <string name="temp_to">Thân nhiệt đến </string>
    <string name="filter_huypo">Lọc thân nhiệt</string>
    <string name="filter_students">Lọc học sinh</string>
    <string name="sort_by_date">Sắp xếp theo ngày cập nhật</string>
    <string name="increase">Tăng</string>
    <string name="decrease">Giảm</string>
    <string name="sort_by_temp">Sắp xếp theo thân nhiệt</string>
    <string name="message_fill_all_text">Hãy nhập đủ thông tin</string>
    <string name="name"><![CDATA[Tên ->]]></string>
    <string name="comma">", "</string>
    <string name="class_label"><![CDATA[Lớp ->]]></string>
    <string name="comma_end_line">, \n</string>
    <string name="sort_temp_increase">Sắp xếp theo thân nhiệt tăng dần\n</string>
    <string name="sort_temp_decrease">Sắp xếp theo thân nhiệt giảm dần\n</string>
    <string name="sort_date_increase">Sắp xếp theo ngày cập nhật tăng dần\n</string>
    <string name="sort_date_decrease">Sắp xếp theo ngày cập nhật giảm dần\n</string>
    <string name="no_data">Không có dữ liệu...</string>
    <string name="server_error">Lỗi máy chủ! Hãy quay lại sau</string>
    <string name="click_back_again">Ấn back 1 lần nữa để thoát</string>
    <string name="loading_data">Đang tải dữ liệu</string>
    <string name="waiting_minute">Đợi trong ít phút...</string>
    <string name="can_trans_data">Lỗi giải mã dữ liệu</string>
    <string name="lb_choose_date">Chọn ngày cập nhật</string>
    <string name="export">Đang xuất dữ liệu...\nVui lòng đợi</string>
    <string name="add_student_success">Thêm mới học sinh thành công</string>
    <string name="exist_student">Mã học sinh đã tồn tại</string>
    <string name="add_student_failed">Thêm học sinh thất bại</string>
    <string name="adding_new_student">Đang thêm mới học sinh</string>
    <string name="export_success">"Xuất dữ liệu thành công \n Kiểm tra tại: "</string>
    <string name="export_failed">"Lỗi khi xuất dữ liệu: Hãy kiểm tra cấp quyền ứng dụng "</string>
    <string name="pie_chart_title">Biểu đồ thân nhiệt</string>
    <string name="hypothermia_results">Kết quả thân nhiệt</string>
    <string name="tab_pie_chart">Biểu đồ</string>
    <string name="temp_not_yes">Chưa đo</string>
    <string name="temp_done">Đã đo</string>
    <string name="view_student_not_yes">Danh sách học sinh chưa đo</string>
    <string name="see_chart">Xem biểu đồ</string>
    <string name="welcome_to_hypothermia">Welcom to \nHyphothermia app</string>
    <string name="login">Đăng nhập</string>
    <string name="new_user_register_now">Người dùng mới? \nHãy liên hệ admin</string>
    <string name="logout">Đăng xuất</string>
    <string name="no_valid_user">Người dùng không tồn tại</string>
    <string name="warning">Cảnh báo</string>
</resources>