<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/viewStudentNotYes"
        android:layout_margin="@dimen/m_8"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    <Button
        android:id="@+id/viewStudentNotYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/m_8"
        android:text="@string/view_student_not_yes"
        />
    <TableLayout
        android:id="@+id/tbl_hypothermia_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_below="@+id/viewStudentNotYes"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <!-- Table Heading -->

        <TableRow
            android:background="@color/text_main_color">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lb_name"
                android:textColor="@android:color/white"
                android:padding="@dimen/p_3"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lb_class"
                android:textColor="@android:color/white"
                android:padding="@dimen/p_3"
                android:textSize="14sp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lb_birthday"
                android:textColor="@android:color/white"
                android:padding="@dimen/p_3"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lb_hypothermia"
                android:textColor="@android:color/white"
                android:padding="@dimen/p_3"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lb_last_update"
                android:textColor="@android:color/white"
                android:padding="@dimen/p_3"
                android:textSize="14sp"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                />
        </TableRow>
    </TableLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_below="@+id/tbl_hypothermia_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <TableLayout
            android:id="@+id/tbl_student_not_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>