<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/txt_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lọc theo tên" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/btn_filter"
            android:layout_marginEnd="@dimen/m_25"
            android:text="@string/lb_filter" />

        <ImageButton
            android:id="@+id/btn_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_baseline_filter_alt_24" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/btnViewList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@drawable/ic_baseline_format_list_bulleted_24"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/btnViewTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@drawable/ic_baseline_grid_on_24"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listViewStudents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnViewTable"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <TableLayout
        android:id="@+id/tbl_student_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnViewList"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@android:color/white">

        <!-- Table Heading -->

        <TableRow android:background="@color/text_main_color">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="@dimen/p_5"
                android:text="@string/lbId"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="@dimen/p_5"
                android:text="@string/lb_name"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="@dimen/p_5"
                android:text="@string/lb_class"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="@dimen/p_5"
                android:text="@string/lb_birthday"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </TableRow>
    </TableLayout>
    <!-- Table Data -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbl_student_header">

        <TableLayout
            android:id="@+id/tbl_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@android:color/white">

        </TableLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>